sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:10: error: '(' expected but identifier found.
  if ecart>1{
     ^